tests/machine/x/fs/dataset_sort_take_limit.error
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/machine/x/fs/dataset_sort_take_limit.fs(8,95): error FS0193: Type constraint mismatch. The type 
    obj    
is not compatible with type
    Anon1    
The type 'obj' is not compatible with the type 'Anon1'

/workspace/mochi/tests/machine/x/fs/dataset_sort_take_limit.fs(11,45): error FS0193: Type constraint mismatch. The type 
    obj    
is not compatible with type
    Anon1    
The type 'obj' is not compatible with the type 'Anon1'

/workspace/mochi/tests/machine/x/fs/dataset_sort_take_limit.fs(11,81): error FS0193: Type constraint mismatch. The type 
    obj    
is not compatible with type
    Anon1    
The type 'obj' is not compatible with the type 'Anon1'
